# autotransformers

./: MANIFEST.in  README.md  pyproject.toml
docs/: autotransformers.html  index.html  search.js
docs/autotransformers/: augmentation.html  autotrainer.html  ckpt_cleaner.html  dataset_config.html  default_param_spaces.html  hfdatasets_manager.html  hftransformers_manager.html  llm_templates.html  metrics.html  metrics_plotter.html  model_config.html  results_getter.html  skip_mix.html  tokenization_functions.html  utils.html
docs/autotransformers/augmentation/: TextAugmenterPipeline.html  augmenter_config.html
notebooks/: README.md
notebooks/NER/: train_spanish_ner.ipynb
notebooks/chatbot_instructions/: somosnlp24_entrenamiento_instrucciones.ipynb  train_instructional_chatbot.ipynb
notebooks/classification/: train_emotion_classification.ipynb  train_multilabel.ipynb  train_rotten_tomatoes.ipynb
notebooks/extractive_qa/: train_sqac.ipynb
notebooks/seq2seq/: train_summarization_mlsum.ipynb
src/autotransformers/: __init__.py  autotrainer.py  ckpt_cleaner.py  dataset_config.py  default_param_spaces.py  hfdatasets_manager.py  hftransformers_manager.py  llm_templates.py  metrics.py  metrics_plotter.py  model_config.py  results_getter.py  skip_mix.py  tokenization_functions.py  utils.py
src/autotransformers/augmentation/: TextAugmenterPipeline.py  __init__.py  augmenter_config.py
tests/: test_autotrainer.py  test_ckpt_cleaner.py  test_dataset_config.py  test_general_utils.py  test_llm_templates.py  test_model_config.py  test_text_augmenter_pipeline.py  test_tokenization_functions.py
